crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/await.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
const doBothThings = async () => {
    const request = doAsyncThing();
    return (await request)::doSyncThing();
};
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,4 +1,5 @@
 const doBothThings = async () => {
   const request = doAsyncThing();
-  return (await request)::doSyncThing();
+  return (await request);
+  ::doSyncThing()
 };
```

# Output

```js
const doBothThings = async () => {
  const request = doAsyncThing();
  return (await request);
  ::doSyncThing()
};
```


# Errors
```
error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ await.js:3:27
  │
3 │     return (await request)::doSyncThing();
  │     ----------------------^
  │     │                     │
  │     │                     An explicit or implicit semicolon is expected here...
  │     ...Which is required to end this statement


```


